微帮帮布局搭建

--- a/app/src/main/res/layout/activity_task_rules.xml
+++ b/app/src/main/res/layout/activity_task_rules.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -12,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:src="@mipmap/icon_rules" />
+        tools:src="@mipmap/icon_rules" />
 
     <TextView
         android:id="@+id/rules_tv"
@@ -21,7 +22,10 @@
         android:layout_margin="15dp"
         android:background="@drawable/edit_shape"
         android:gravity="left|center_vertical"
-        android:padding="10dp"
+        android:paddingStart="50dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingEnd="10dp"
         android:textSize="12sp"
         android:visibility="gone" />
 
@@ -31,6 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:src="@mipmap/icon_task2" />
+        tools:src="@mipmap/icon_task2" />
 
 </LinearLayout>
