--- a/app/src/main/res/layout/item_ranking.xml
+++ b/app/src/main/res/layout/item_ranking.xml
@@ -20,9 +20,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingStart="20dp"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingStart="10dp">
 
         <ImageView
             android:id="@+id/head_img"
@@ -30,14 +30,34 @@
             android:layout_height="25dp"
             android:src="@mipmap/ic_launcher" />
 
-        <TextView
-            android:id="@+id/name_tv"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:gravity="center"
-            android:text="300.00"
-            android:textSize="12sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:paddingEnd="3dp"
+                android:text="300.00"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/vip_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:paddingEnd="3dp"
+                android:text="300.00"
+                android:textSize="12sp"
+                android:visibility="gone" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
     <TextView
