--- a/app/src/main/res/layout/activity_withdraw_money.xml
+++ b/app/src/main/res/layout/activity_withdraw_money.xml
@@ -77,6 +77,14 @@
         android:textSize="15sp" />
 
     <include layout="@layout/pay_change_layout" />
+    <TextView
+        android:id="@+id/tip_tv"
+        android:layout_marginTop="5dp"
+        tools:text="提示：提现手续费用按照提现总额的3%收取"
+        android:textSize="10sp"
+        android:layout_marginStart="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
