添加新字段

--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -20,7 +20,92 @@
             android:orientation="vertical"
             android:paddingTop="10dp">
 
-            <include layout="@layout/item_task" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/edit_shape"
+                android:elevation="3dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
+
+                <ImageView
+                    android:id="@+id/left_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:src="@mipmap/icon_task" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/title_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        tools:text="落砂机奶茶"
+                        android:textColor="@color/txt_black" />
+
+                    <TextView
+                        android:id="@+id/status_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        tools:text="落砂机奶茶落砂机奶茶落砂机奶茶落砂机奶茶"
+                        android:textSize="12sp" />
+
+                    <LinearLayout
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="任务奖励："
+                            android:textSize="10sp"/>
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="一级会员：¥12.00"
+                                android:textSize="10sp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="二级会员：¥24.00"
+                                android:textSize="10sp"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/date_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:gravity="center"
+                    android:visibility="gone"
+                    android:text="2018/10/9"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,7 +128,7 @@
                     android:textSize="10sp" />
             </LinearLayout>
 
-            <FrameLayout
+            <LinearLayout
                 android:elevation="3dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
@@ -51,13 +136,14 @@
                 android:background="@drawable/edit_shape"
                 android:layout_width="match_parent"
                 android:minHeight="120dp"
+                android:orientation="vertical"
                 android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/copy_tv"
                     android:padding="10dp"
                     android:textSize="12sp"
-                    tools:text="尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到"
+                    tools:text="尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到发老师看到尽快尽快尽快卡死了科技阿里卡时间段风口浪尖埃里克森大家发老师看到"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -78,7 +164,7 @@
                     android:text="@string/copy"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
-            </FrameLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
