--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -43,6 +43,16 @@
             android:maxLines="1"
             tools:text="落砂机奶茶落砂机奶茶落砂机奶茶落砂机奶茶"
             android:textSize="12sp" />
+        <TextView
+            android:id="@+id/num_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:visibility="gone"
+            tools:text="任务数量：20/40"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
