--- a/app/src/main/res/layout/activity_mine_wallet.xml
+++ b/app/src/main/res/layout/activity_mine_wallet.xml
@@ -109,16 +109,19 @@
                 android:textSize="12sp" />
         </LinearLayout>
     </RelativeLayout>
-
+    <com.weibangbang.view.SuperSwipeRefreshLayout
+        android:id="@+id/super_refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:elevation="3dp">
     <ListView
         android:id="@+id/mineWallet_list_lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
-        android:elevation="3dp"
         tools:listitem="@layout/item_mine_wallet" />
-
+    </com.weibangbang.view.SuperSwipeRefreshLayout>
 </LinearLayout>
