--- a/app/src/main/res/layout/activity_task_hall.xml
+++ b/app/src/main/res/layout/activity_task_hall.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -11,16 +11,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:background="@mipmap/icon_task_bg"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:onClick="onGeneral_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="center"
+            android:onClick="onGeneral_layout">
 
             <TextView
                 android:id="@+id/general_task_tv"
@@ -33,11 +33,11 @@
         </LinearLayout>
 
         <LinearLayout
-            android:onClick="onAdvance_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="center"
+            android:onClick="onAdvance_layout">
 
             <TextView
                 android:id="@+id/advance_task_tv"
@@ -50,11 +50,17 @@
         </LinearLayout>
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_marginTop="10dp"
-        tools:listitem="@layout/item_task"
-        tools:itemCount="5"
+    <com.weibangbang.view.SuperSwipeRefreshLayout
+        android:id="@+id/super_refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:itemCount="5"
+            tools:listitem="@layout/item_task" />
+    </com.weibangbang.view.SuperSwipeRefreshLayout>
 </LinearLayout>
